test/sema/mutate-immutable-this.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    let i: int;
    // CHECK: [[@LINE+1]]:24: error: cannot increment immutable value
    func bar() { this.i++; }
}
